--- a/resources/html/index.html
+++ b/resources/html/index.html
@@ -21,6 +21,7 @@
     </script>
 </head>
 <body>
+    <!-- Header sesction -->
     <header class="header section--bb">
         <div class="container">
             <div class="row row-inline">
@@ -72,6 +73,7 @@
             </div>
         </div>
     </header>
+    <!-- And Header sesction -->
 
     <!-- Menu-aim -->
     <section class="top-nav-section section--bb">
@@ -84,6 +86,7 @@
                             <li class="item item--padding" data-submenu-id="2"><span>Item2</span></li>
                             <li class="item item--padding" data-submenu-id="3"><span>Item3</span></li>
                             <li class="item item--padding"><a href="/product.html">Product</a></li>
+                            <li class="item item--padding"><a href="/category.html">Category</a></li>
                         </ul>
                         <div class="sub-navigation-container">
                             <div id="1" class="sub-navigation sub-navigation-panel">
@@ -154,7 +157,7 @@
             </div>
         </div>
     </section>
-    <!-- And Gellery sesction -->
+    <!-- Menu-aim -->
 
     <!-- Gellery sesction -->
     <section class="section--padding">
@@ -272,7 +275,7 @@
             <div class="row">
                 <h3 class="text-center">Recently viewed &amp; more</h3>
                 <ul class="products-list products-list--hover col-xs-12">
-                     <li class="products-list-item col-xs-6 col-md-2">
+                     <li class="products-list-item w-xs-6-12 w-md-2-12">
                          <div class="products-list-content">
                              <a href="#" class="products-list-link" data-toggle="tooltip" data-placement="bottom" title="Lorem ipsum dolor sit amet.">
                                  <div class="products-list-img-wrap">
@@ -291,7 +294,7 @@
                              </a>
                          </div>
                      </li>
-                     <li class="products-list-item col-xs-6 col-md-2">
+                     <li class="products-list-item w-xs-6-12 w-md-2-12">
                          <div class="products-list-content">
                              <a href="#" class="products-list-link" data-toggle="tooltip" data-placement="bottom" title="Lorem ipsum dolor sit amet.">
                                  <div class="products-list-img-wrap">
@@ -310,7 +313,7 @@
                              </a>
                          </div>
                      </li>
-                     <li class="products-list-item col-xs-6 col-md-2">
+                     <li class="products-list-item w-xs-6-12 w-md-2-12">
                          <div class="products-list-content">
                              <a href="#" class="products-list-link" data-toggle="tooltip" data-placement="bottom" title="Lorem ipsum dolor sit amet consectetur.">
                                  <div class="products-list-img-wrap">
@@ -329,7 +332,7 @@
                              </a>
                          </div>
                      </li>
-                     <li class="products-list-item col-xs-6 col-md-2">
+                     <li class="products-list-item w-xs-6-12 w-md-2-12">
                          <div class="products-list-content">
                              <a href="#" class="products-list-link" data-toggle="tooltip" data-placement="bottom" title="Lorem ipsum dolor sit amet consectetur adipisicing elit.">
                                  <div class="products-list-img-wrap">
@@ -348,7 +351,7 @@
                              </a>
                          </div>
                      </li>
-                     <li class="products-list-item col-xs-6 col-md-2">
+                     <li class="products-list-item w-xs-6-12 w-md-2-12">
                          <div class="products-list-content">
                              <a href="#" class="products-list-link" data-toggle="tooltip" data-placement="bottom" title="Lorem ipsum dolor sit amet.">
                                  <div class="products-list-img-wrap">
@@ -367,7 +370,7 @@
                              </a>
                          </div>
                      </li>
-                     <li class="products-list-item col-xs-6 col-md-2">
+                     <li class="products-list-item w-xs-6-12 w-md-2-12">
                          <div class="products-list-content">
                              <a href="#" class="products-list-link" data-toggle="tooltip" data-placement="bottom" title="Lorem ipsum dolor sit amet.">
                                  <div class="products-list-img-wrap">
@@ -398,7 +401,7 @@
             <div class="row">
                 <h3 class="text-center">Shop by category</h3>
                 <ul class="products-list products-list--bordered products-list--hover col-xs-12">
-                    <li class="products-list-item col-xs-6 col-md-2">
+                    <li class="products-list-item w-xs-6-12 w-md-2-12">
                         <div class="products-list-content">
                             <a href="#" class="products-list-link" data-toggle="tooltip" data-placement="bottom" title="Lorem ipsum dolor sit amet.">
                                 <div class="products-list-img-wrap">
@@ -412,7 +415,7 @@
                             </a>
                         </div>
                     </li>
-                    <li class="products-list-item col-xs-6 col-md-2">
+                    <li class="products-list-item w-xs-6-12 w-md-2-12">
                         <div class="products-list-content">
                             <a href="#" class="products-list-link" data-toggle="tooltip" data-placement="bottom" title="Lorem ipsum dolor sit amet.">
                                 <div class="products-list-img-wrap">
@@ -426,7 +429,7 @@
                             </a>
                         </div>
                     </li>
-                    <li class="products-list-item col-xs-6 col-md-2">
+                    <li class="products-list-item w-xs-6-12 w-md-2-12">
                         <div class="products-list-content">
                             <a href="#" class="products-list-link" data-toggle="tooltip" data-placement="bottom" title="Lorem ipsum dolor sit amet.">
                                 <div class="products-list-img-wrap">
@@ -440,7 +443,7 @@
                             </a>
                         </div>
                     </li>
-                    <li class="products-list-item col-xs-6 col-md-2">
+                    <li class="products-list-item w-xs-6-12 w-md-2-12">
                         <div class="products-list-content">
                             <a href="#" class="products-list-link" data-toggle="tooltip" data-placement="bottom" title="Lorem ipsum dolor sit amet.">
                                 <div class="products-list-img-wrap">
@@ -454,7 +457,7 @@
                             </a>
                         </div>
                     </li>
-                    <li class="products-list-item col-xs-6 col-md-2">
+                    <li class="products-list-item w-xs-6-12 w-md-2-12">
                         <div class="products-list-content">
                             <a href="#" class="products-list-link" data-toggle="tooltip" data-placement="bottom" title="Lorem ipsum dolor sit amet.">
                                 <div class="products-list-img-wrap">
@@ -468,7 +471,7 @@
                             </a>
                         </div>
                     </li>
-                    <li class="products-list-item col-xs-6 col-md-2">
+                    <li class="products-list-item w-xs-6-12 w-md-2-12">
                         <div class="products-list-content">
                             <a href="#" class="products-list-link" data-toggle="tooltip" data-placement="bottom" title="Lorem ipsum dolor sit amet.">
                                 <div class="products-list-img-wrap">
@@ -489,7 +492,7 @@
     <!-- And Category list section -->
 
     <!-- Reviews section -->
-    <section>
+    <section class="section section--padding">
         <div class="container">
             <div class="row">
                 <div class="reviews col-xs-12">
@@ -585,40 +588,6 @@
         </div>
     </section>
     <!-- And Reviews section -->
-
-    <!-- Main sesction -->
-    <section>
-        <div class="container">
-            <div class="row">
-
-                <!-- Sidebar -->
-                <aside class="col-xs-2">
-                    <!-- <nav>
-                        <ul class="nav nav-pills nav-stacked">
-                            <li class="active">
-                                <a href="#">Home</a>
-                            </li>
-                            <li>
-                                <a href="#">Profile</a>
-                            </li>
-                            <li>
-                                <a href="#">Messages</a>
-                            </li>
-                        </ul>
-                    </nav> -->
-                </aside>
-                <!-- And Sidebar -->
-
-                <!-- Content -->
-                <div class="col-xs-10">
-                    <p>Content</p>
-                </div>
-                <!-- And Content -->
-
-            </div>
-        </div>
-    </section>
-    <!-- And Main sesction -->
 
     <!-- Banner bogttom section -->
     <section class="banner">
@@ -734,27 +703,8 @@
             </div>
         </div>
     </footer>
-
-    <svg class="icon">
-        <use xlink:href="#visa"></use>
-    </svg>
-    <svg class="icon">
-        <use xlink:href="#master-card"></use>
-    </svg>
-    <svg class="icon">
-        <use xlink:href="#discover"></use>
-    </svg>
-    <svg class="icon">
-        <use xlink:href="#american-express"></use>
-    </svg>
-    <svg class="icon">
-        <use xlink:href="#paypal"></use>
-    </svg>
-    <svg class="icon">
-        <use xlink:href="#lock"></use>
-    </svg>
-
     <!-- And Footer sesction -->
+
     <script src="/js/app.js"></script>
 </body>
 </html>
